<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/marker_info_window"
    tools:context=".MarkerInfoActivityWindow">

    <Button
        android:id="@+id/btn_directions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="25dp"
        android:text="@string/directions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_image" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="25dp"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_directions" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="7dp"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/text_snippet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_snippet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="55dp"
        android:text="@string/snippet"
        app:layout_constraintBottom_toTopOf="@+id/place_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <ImageView
        android:id="@+id/place_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="193dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_directions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_snippet"
        tools:src="@tools:sample/avatars" />

</android.support.constraint.ConstraintLayout>